--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="src/assets/logo2.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Career Compass</title>
   </head>
   <body>
     <div id="root"></div>
